2009-10-29  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/generated.cs:
	* gtk-gui/MonoDevelop.XmlEditor.Gui.XmlSchemasPanelWidget.cs:
	* gtk-gui/MonoDevelop.XmlEditor.Gui.XmlEditorOptionsPanelWidget.cs:
	  Flush.

2009-10-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.XmlEditor/XmlTextEditorExtension.cs: Fixed 'Bug
	  549703 - Customised XML file extensions are no longer
	  syntax-highlighted'.

2009-10-08  Ankit Jain  <jankit@novell.com>

	* MonoDevelop.XmlEditor.csproj: Use \ instead of '/'
	in the Import.

2009-10-08  Ankit Jain  <jankit@novell.com>

	* MonoDevelop.XmlEditor.csproj: Add md.targets .

2009-10-07  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.XmlEditor.addin.xml: Bump MD version.

2009-10-06  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.csproj:
	* MonoDevelop.XmlEditor.addin.xml:
	* MonoDevelop.XmlEditor/Commands.cs:
	* MonoDevelop.XmlEditor/XmlParser.cs:
	* MonoDevelop.XmlEditor/XmlNamespace.cs:
	* MonoDevelop.XmlEditor/QualifiedName.cs:
	* MonoDevelop.XmlEditor/XmlElementPath.cs:
	* MonoDevelop.XmlEditor/XmlEditorService.cs:
	* MonoDevelop.XmlEditor/XmlSchemaManager.cs:
	* MonoDevelop.XmlEditor/XmlFileExtensions.cs:
	* MonoDevelop.XmlEditor.XPath/XPathQueryPad.cs:
	* MonoDevelop.XmlEditor/EncodedStringWriter.cs:
	* MonoDevelop.XmlEditor.Gui/XmlSchemasPanel.cs:
	* MonoDevelop.XmlEditor.XPath/XPathNodeMatch.cs:
	* MonoDevelop.XmlEditor/XmlFileExtensionNode.cs:
	* MonoDevelop.XmlEditor/XmlSchemaAssociation.cs:
	* MonoDevelop.XmlEditor/DeclarationViewWindow.cs:
	* MonoDevelop.XmlEditor/XmlEditorAddInOptions.cs:
	* MonoDevelop.XmlEditor/OpenStylesheetCommand.cs:
	* MonoDevelop.XmlEditor/XmlTextEditorExtension.cs:
	* MonoDevelop.XmlEditor.XPath/XPathQueryWidget.cs:
	* MonoDevelop.XmlEditor.XPath/XPathHistoryList.cs:
	* MonoDevelop.XmlEditor/QualifiedNameCollection.cs:
	* MonoDevelop.XmlEditor/OpenXPathQueryPadCommand.cs:
	* MonoDevelop.XmlEditor.XPath/XPathNamespaceList.cs: